# snailbot_visionplugin

./: README.md
pose_solver/aruco_image_preprocessing_nodelet/: CMakeLists.txt  aruco_image_preprocessing_nodelet.xml  package.xml
pose_solver/aruco_image_preprocessing_nodelet/cfg/: ArucoPreprocessing.cfg
pose_solver/aruco_image_preprocessing_nodelet/include/aruco_image_preprocessing_nodelet/: aruco_image_preprocessing_nodelet.h
pose_solver/aruco_image_preprocessing_nodelet/src/: aruco_image_preprocessing_nodelet.cpp
pose_solver/aruco_pose_nodelet/: CMakeLists.txt  aruco_pose_nodelet.xml  package.xml
pose_solver/aruco_pose_nodelet/include/aruco_pose/: aruco_pose_nodelet.h
pose_solver/aruco_pose_nodelet/launch/: video_process.launch
pose_solver/aruco_pose_nodelet/meshes/: MODEL.STL  MODEL3.STL
pose_solver/aruco_pose_nodelet/param/: aruco_poses.yaml  ff_ost.yaml  ost.yaml
pose_solver/aruco_pose_nodelet/src/: aruco_pose_nodelet.cpp
pose_solver/robo_info_nodelet/: CMakeLists.txt  package.xml  robo_info_nodelet.xml
pose_solver/robo_info_nodelet/cfg/: RoboInfo.cfg
pose_solver/robo_info_nodelet/include/robo_info_nodelet/: robo_info_nodelet.h
pose_solver/robo_info_nodelet/src/: robo_info_nodelet.cpp
snailbot_msgs/: CMakeLists.txt  package.xml
snailbot_msgs/action/: ConnectedRelation.action
stl_surface_projection/: CMakeLists.txt  package.xml
stl_surface_projection/config/: test.yaml
stl_surface_projection/include/stl_surface_projection/: stl_surface_projector.h
stl_surface_projection/launch/: projector.launch
stl_surface_projection/src/: stl_surface_projection_node.cpp  stl_surface_projector.cpp
