<?xml version="1.0"?>
<package format="2">
  <name>aruco_image_preprocessing_nodelet</name>
  <version>0.0.1</version>
  <description>A nodelet for preprocessing images for Aruco marker detection</description>

  <maintainer email="xianghong@todo.todo">xianghong</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <depend>dynamic_reconfigure</depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <nodelet plugin="${prefix}/aruco_image_preprocessing_nodelet.xml"/>
  </export>
</package>
